# LanXin-Android

./: .ci-trigger  .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  build.gradle.kts  debug-keystore.jks  gradle.properties  pr_body_141.md  settings.gradle.kts
.github/workflows/: android-ci.yml  chat-mic-dictation-verify.yml  chat-silent-crash-verify.yml  chat-status-refs-verify.yml  ci-voice-models.yml  claw-host-verify.yml  codeql.yml  companion-vision-explain-verify.yml  compile-kb-p0.yml  debug-build.yml  device-sensing-verify.yml  guide-verify.yml  ktlint.yml  navigate-verify.yml  p1-tts-native-verify.yml  p2-mnn-local-llm-verify.yml  p2-verify.yml  p3-live2d-cubism-verify.yml  p3-verify.yml  p4-verify.yml  p5-verify.yml  p5a-bm25-verify.yml  p6-verify.yml  phase4-unified-search-verify.yml  phase5-dynamic-plugins-verify.yml  phase5-plugin-manager-ui-verify.yml  phase5-plugin-market-verify.yml  phase5-plugin-signature-verify.yml  phase5-sync-verify.yml  phase6-1-local-inference-verify.yml  phase6-2-offline-fallback-verify.yml  phase6-3-chat-router-verify.yml  phase6-4-offline-asr-verify.yml  phase6-debug-assets-verify.yml  phase6-pet-voice-session-verify.yml  phase7-system-tools-verify.yml  provider-align-verify.yml  release-build.yml  scene-sensing-verify.yml  smart-capabilities-verify.yml  (+2 more)
app/: build.gradle.kts  proguard-rules.pro
app/libs/: README.md
app/skill/: README.md
app/src/main/: AndroidManifest.xml
app/src/main/assets/judgment_packs/: README.md  lanxin_companion.json  work_efficiency.json
app/src/main/assets/pet/: desktop-pet.html
app/src/main/assets/pet/lib/: NOTICE.txt
app/src/main/assets/pet/live2d/Mao/: NOTICE.txt  (+1 more)
app/src/main/assets/pet/music/: README.txt
app/src/main/assets/skills/lanxin-build-workflow/: SKILL.md
app/src/main/cpp/: CMakeLists.txt  mnn_lanxin_jni.cpp  mnn_lanxin_jni_stub.cpp
app/src/main/res/drawable/: splash_icon_inset.xml
app/src/main/res/layout/: activity_crash_display.xml
app/src/main/res/mipmap-anydpi/: ic_gpt_mobile.xml
app/src/main/res/values/: ic_gpt_mobile_background.xml  strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-ars/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fa/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-in/: strings.xml
app/src/main/res/values-iw/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko-rKR/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-pl/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-pt-rBR/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-ta/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
builtin/github/: README.md
builtin/knowledge/: README.md
builtin/local_inference/: README.md
builtin/persona/: README.md
builtin/pet/: README.md
builtin/platform/: README.md
builtin/scheduler/: README.md  SCHEDULER_PLAN.md
builtin/statistics/: README.md
builtin/sync/: README.md
builtin/systemtools/: README.md
builtin/unified_search/: README.md
builtin/voice/: README.md
core/log/: README.md
core/updater/: README.md
debug-assets/: README.md
docs/: architecture-fast-companion.md  chat-status-refs.md  claw-host.md  companion-vision-explain.md  debug-assets.md  device-regression-checklist.md  device-sensing.md  dynamic-plugins.md  fast-companion.md  guide.md  live2d-cubism-render.md  live2d-mao-sample.md  local-brain-setup-guide.md  local-inference.md  meiju-style-pet.md  memory-alignment.md  navigate.md  plugin-market-index.sample.json  plugin-market.md  plugin-signature.md  provider-alignment.md  scene-recognition.md  scene-sensing.md  smart-capabilities.md  sync-protocol.md  system-tools.md  voice-asr.md  voice-tts.md  websearch.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
metadata/en-US/: title.txt
plugins/chat/: README.md
plugins/logger/: README.md
plugins/memory/: README.md
plugins/unified_inbox/: README.md
scripts/: ci-bundle-voice-assets.sh  ci-verify-tts.py  download-debug-asr.sh  download-debug-assets.sh  download-debug-live2d.sh  download-debug-tts.sh  download_gte_small.sh  fetch-debug-assets.sh  vendor-live2d-mao.sh
(+815 files in other folders)
